# padelkit

./: .gitignore  CHANGELOG.md  KNOWLEDGE.md  PLAN_INICIAL.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml
docs/: README.md  docs.config.json  page.mdx
docs/court/: page.mdx
docs/court-dimensions/: page.mdx
docs/court-geometry/: page.mdx
docs/court-landmark/: page.mdx
docs/court-location/: page.mdx
docs/icons/: TrophyIcon.tsx  UserGroupIcon.tsx  UserNoCircleIcon.tsx  ViewfinderCircleIcon.tsx
docs/landmark/: page.mdx
docs/match/: page.mdx
docs/match-configuration/: page.mdx
docs/match-score/: page.mdx
docs/match-score-history/: page.mdx
docs/padel-court/: page.mdx
docs/player/: page.mdx
docs/quickstart/: page.mdx
docs/scoring/: page.mdx
docs/scoring-system/: page.mdx
docs/serving-state/: page.mdx
docs/team/: page.mdx
src/padelkit/: __init__.py
src/padelkit/court/: __init__.py  court.py  dimensions.py  enums.py  landmarks.py  location.py
src/padelkit/scoring/: __init__.py  entities.py  match.py  score.py  serving.py
tests/: test_court.py  test_match.py  test_scoring.py
