[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "padelkit"
version = "0.0.1"
description = "Open source toolkit for padel analytics and computer vision"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Fidel Echevarria" }
]
keywords = [
    "padel",
    "sports analytics",
    "computer vision",
    "court geometry",
    "scoring"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "build",
    "twine"
]

[project.urls]
Homepage = "https://padelkit.dev"
Documentation = "https://padelkit.dev"
Source = "https://github.com/padelkit/padelkit"
Issues = "https://github.com/padelkit/padelkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/padelkit"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
